--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -5,3 +5,4 @@ addAssignees: false
 # A list of reviewers to be added to pull requests (GitHub user name)
 reviewers:
   - prathimacode-hub
+  - geetaroraqaz
