--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -5,6 +5,6 @@ addAssignees: false
 # A list of reviewers to be added to pull requests (GitHub user name)
 reviewers:
   - prathimacode-hub
-  - geetaroraqaz
   - abhisheks008
   - vilgad
+  - Dhruvsinghjadon
